Fix autoscrolling on small screens
This fixes #29

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -255,9 +255,8 @@ nav .pure-menu-heading {
 }
 
 .content {
-    position: absolute;
-    top: 40px;
-    bottom: 0px;
+    position: relative;
+    top: 35px;
     width: 100%;
 }
 
